--- a/src/client/styles/travelLog.scss
+++ b/src/client/styles/travelLog.scss
@@ -24,7 +24,7 @@ $translateAmount: 0.25 * $sectionHeight;
 
 #travel-log {
   min-height: 94vh;
-  width: 100vw;
+  //width: 100vw;
   //border: 1px solid black;
   background-color: #f6f5f5;
   flex-direction: column;
